Fix portable distribution ISSUE with java.ext.dirs=""
It's not needed anymore not to load JRE ext folders to avoid conflict
with JAI libraries .. A side effect is when accessibility binaries are
in this ext folder the JRE behavior is abnormal.